--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ianhuang-3d",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ianhuang0630.github.io/me",
+  "homepage": "http://ianhuang.ai",
   "dependencies": {
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
